--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,15 @@
-@import 'tailwindcss';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  font-size: 10px;
+  font-family: 'Montserrat', sans-serif;
 
   /* index variables */
+  --toast-index: 102;
   --modal-index: 101;
   --navbar-index: 100;
   --liked-products-index: 99;
@@ -16,28 +21,51 @@
   --navbar-height: 55px;
 }
 
-@layer components {
-  button {
-    @apply hover:cursor-pointer;
-  }
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-/* @media (prefers-color-scheme: dark) {
+@media (max-width: 1536px) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    font-size: 9.5px;
   }
-} */
+}
+
+@media (max-width: 1280px) {
+  :root {
+    font-size: 9px;
+  }
+}
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  padding-top: var(--navbar-height);
+}
+
+input,
+button,
+textarea {
+  font-family: 'Montserrat', sans-serif;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  transition:
+    background-color 0.1s ease-in-out,
+    color 0.1s ease-in-out;
+}
+
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition:
+    background-color 0.1s ease-in-out,
+    color 0.1s ease-in-out;
+}
+
+input,
+textarea {
+  outline: none;
+  border: none;
+}
+
+ul {
+  list-style: none;
 }
