Update category logic

--- a/src/app/(public)/products/components/categories.module.scss
+++ b/src/app/(public)/products/components/categories.module.scss
@@ -38,8 +38,9 @@
     gap: 0.5rem;
 
     .category {
-      text-decoration: none;
-      color: black;
+      text-align: left;
+      font-size: 1.6rem;
+
 
       &:hover {
         text-decoration: underline;
