--- a/src/components/ui/loading/loading.module.scss
+++ b/src/components/ui/loading/loading.module.scss
@@ -1,17 +1,28 @@
 .loadingCnr {
     width: 100%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 60vh;
+    gap: 1.6rem;
 
     .spinner {
-        animation: spin .6s linear infinite;
-        color: grey;
+        font-size: 4rem;
+        animation: spin 0.8s linear infinite;
+        color: #0070f3;
+    }
+
+    .text {
+        color: #666;
+        font-size: 1.6rem;
     }
 }
 
-
 @keyframes spin {
     from {
-        transform: rotate(0);
+        transform: rotate(0deg);
     }
 
     to {
