--- a/src/styles/login-register-form.module.scss
+++ b/src/styles/login-register-form.module.scss
@@ -43,9 +43,9 @@
                     border-color: #007bff;
                 }
 
-                &:focus~label,
-                &~.submitting,
-                &:is(:-webkit-autofill, :autofill)~label {
+                &:focus+label,
+                &:not(:placeholder-shown)+label,
+                &:is(:-webkit-autofill, :autofill)+label {
                     @include inputActive;
                 }
             }
@@ -57,7 +57,7 @@
                 left: 1.8rem;
                 transform: translateY(-50%);
                 color: #666;
-                pointer-events: none;
+                cursor: text;
                 transition: all 0.2s ease-in-out;
                 border-radius: 5px;
             }
@@ -67,25 +67,16 @@
                 position: absolute;
                 top: 50%;
                 transform: translateY(-50%);
-                right: 15px;
+                right: 10px;
                 color: #555;
                 font-size: 1.6rem;
+                background: none;
+                border: none;
+                cursor: pointer;
+                padding: 0.5rem;
             }
         }
 
-        .filled {
-            label {
-                @include inputActive;
-            }
-        }
-
-        .loginInputCnr {
-            input {
-                &:valid~label {
-                    @include inputActive;
-                }
-            }
-        }
     }
 
     .buttonsCnr {
